EE-3135- IE bug fix and scrollbar update

--- a/app/src/styles/bootstrap-table-scroll.scss
+++ b/app/src/styles/bootstrap-table-scroll.scss
@@ -1,6 +1,20 @@
 .bootstrap-vue-table-scroll {
-  display:block;
   width: 100%;
-  height:150px;
-  overflow-y:auto;
+  table-layout: fixed;
+
 }
+
+td:nth-child(1), th:nth-child(1) { min-width: 200px; }
+td:nth-child(2), th:nth-child(2) { min-width: 160px; }
+td:nth-child(3), th:nth-child(3) { width: 80px; }
+
+.thead-fixed {
+  display:block;
+}
+
+
+  .tbody-scroll {
+    display: block;
+    overflow-y: auto;
+    height: 95px;
+  }
